<resources>
    <string name="app_name">C2</string>
    <string name="textone">Start your order here:</string>
    <string name="texttwo">Pre-order</string>
    <string name="textthree">Collection</string>
    <string name="textfour">Opens at 17:00   Delivery from €2.00 </string>
    <string name="textfive">See menu</string>
    <string name="iconone">delivery</string>
    <string name="mainIcon">dorset</string>
    <string name="iconthree">moto</string>
    <string name="iconfour">menu</string>
    <string name="sample_text">Sample text</string>
    <string name="btn_moreText">more</string>
</resources>