<?xml version="1.0" encoding="utf-8"?>

<!-- 20344 Jose Fernando Gonzalez Anavia   16336 Elshy Xiomara Rosado Jimenez -->


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/buttonMain"
        android:layout_width="77dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/mainIcon"
        app:layout_constraintBottom_toTopOf="@+id/buttonDelivery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/mainicon" />


    <ImageButton
        android:id="@+id/buttonPickup"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/iconone"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/buttonDelivery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonDelivery"
        app:srcCompat="@drawable/pickup" />

    <ImageButton
        android:id="@+id/buttonDelivery"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonPickup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.318"
        app:srcCompat="@drawable/delivery"
        android:scaleType="centerInside"
        android:contentDescription="@string/iconthree" />

    <ImageButton
        android:id="@+id/buttonMenu"
        android:layout_width="94dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDelivery"
        app:layout_constraintVertical_bias="0.716"
        app:srcCompat="@drawable/menu"
        android:scaleType="centerInside"
        android:contentDescription="@string/iconfour" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textone"
        app:layout_constraintBottom_toTopOf="@+id/buttonDelivery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMain" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/texttwo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonDelivery"
        app:layout_constraintTop_toBottomOf="@+id/buttonDelivery"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/textthree"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonPickup"
        app:layout_constraintTop_toBottomOf="@+id/buttonPickup"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="141dp"
        android:layout_height="64dp"
        android:text="@string/textfour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonDelivery"
        app:layout_constraintTop_toBottomOf="@+id/buttonDelivery"
        app:layout_constraintVertical_bias="0.265" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textfive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMenu"
        app:layout_constraintVertical_bias="0.246" />

</androidx.constraintlayout.widget.ConstraintLayout>